patch #6673: Add --dry-run option https://savannah.nongnu.org/patch/?6673

--- a/duplicity.1
+++ b/duplicity.1
@@ -214,6 +214,9 @@ option implies additional need for disk space in the temporary storage
 location; rather than needing to store only one volume at a time,
 enough storage space is required to store two volumes.
 .TP
+.BI "--dry-run "
+Calculate what would be done, but do not perform any backend actions
+.TP
 .BI "--encrypt-key " key
 When backing up, encrypt to the given public key, instead of using
 symmetric (traditional) encryption.  Can be specified multiple times.
