--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+New in v0.5.04 (2008/12/??)
+---------------------------
+patch #6678: Add progress metering
+https://savannah.nongnu.org/patch/?6678
+
+
 New in v0.5.03 (2008/11/17)
 ---------------------------
 bug #24731: Documentation error: "if... if" in remove-older-than paragraph
