bug #25090: Typos and trailing whitespace in duplicity manpage https://savannah.nongnu.org/bugs/?25090

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,9 @@ https://savannah.nongnu.org/patch/?6678
 patch #6686: Add error codes for all fatal errors
 https://savannah.nongnu.org/patch/?6686
 
+bug #25090: Typos and trailing whitespace in duplicity manpage
+https://savannah.nongnu.org/bugs/?25090
+
 
 New in v0.5.03 (2008/11/17)
 ---------------------------
