--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,6 +30,9 @@ https://savannah.nongnu.org/patch/?6696
 patch #6697: Always log at least one progress during dry run
 https://savannah.nongnu.org/patch/?6697
 
+patch #6700: Make duplicity translatable
+https://savannah.nongnu.org/patch/?6700
+
 GPG was throwing "gpg: [don't know]: invalid packet (ctb=14)" and apparently
 this is non-fatal.  There is a fix for this being rolled into GPG 2.x.
 http://lists.gnupg.org/pipermail/gnupg-devel/2006-September/023180.html
