--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.04 (2008/12/??)
+New in v0.5.04 (2008/12/27)
 ---------------------------
 patch #6678: Add progress metering
 https://savannah.nongnu.org/patch/?6678
