Use reldate expansion to include release date.

--- a/duplicity.1
+++ b/duplicity.1
@@ -1,4 +1,4 @@
-.TH DUPLICITY 1 "DECEMBER 2008" "Version 0.5.03" "User Manuals" \"  -*- nroff -*-
+.TH DUPLICITY 1 "$reldate" "Version $version" "User Manuals" \"  -*- nroff -*-
 
 .SH NAME
 duplicity \- Encrypted backup using rsync algorithm
