--- a/rdiffdir.1
+++ b/rdiffdir.1
@@ -1,4 +1,4 @@
-.TH RDIFFDIR 1 "AUGUST 2002" "Version 0.0" "User Manuals" \"  -*- nroff -*-
+.TH RDIFFDIR 1 "$reldate" "Version $version" "User Manuals" \"  -*- nroff -*-
 .SH NAME
 rdiffdir \- compute and apply signatures and diffs to directories
 .SH SYNOPSIS
