--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.05 (2008/12/??)
+New in v0.5.05 (2008/12/30)
 ---------------------------
 bug #25194: Duplicity 5.04 requires python-distutils-extra...
 https://savannah.nongnu.org/bugs/?25194
