sr #106583: document the need to use the --force option https://savannah.nongnu.org/support/?106583

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,9 @@ https://savannah.nongnu.org/bugs/?25239
 patch #6709: Report correct number of volumes when restoring
 https://savannah.nongnu.org/patch/?6709
 
+sr #106583: document the need to use the --force option
+https://savannah.nongnu.org/support/?106583
+
 
 New in v0.5.05 (2008/12/30)
 ---------------------------
