--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,9 @@ New in v0.5.06 (2009/01/??)
 bug #25331: When --archive-dir and --encrypt-key are used together, incremental fails.
 https://savannah.nongnu.org/bugs/index.php?25331
 
+bug #25379: sys.exit() causes traceback and should not
+https://savannah.nongnu.org/bugs/index.php?25379
+
 Reworked patch 6701 to list collection one at a time rather than
 writing all as one huge list.  Was causing memeory problems when
 the collections got large.
