--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,9 @@ https://savannah.nongnu.org/bugs/index.php?25331
 bug #25379: sys.exit() causes traceback and should not
 https://savannah.nongnu.org/bugs/index.php?25379
 
+Increase default volume size (--volsize) to 25M from 5M.  This
+reduces the number of volumes to accomodate larger backups.
+
 Reworked patch 6701 to list collection one at a time rather than
 writing all as one huge list.  Was causing memeory problems when
 the collections got large.
