--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,13 @@
-New in v0.5.06 (2009/01/??)
+New in v0.5.07 (2009/01/??)
 ---------------------------
 bug #25331: When --archive-dir and --encrypt-key are used together, incremental fails.
-https://savannah.nongnu.org/bugs/index.php?25331
+https://savannah.nongnu.org/bugs/?25331
 
 bug #25379: sys.exit() causes traceback and should not
-https://savannah.nongnu.org/bugs/index.php?25379
+https://savannah.nongnu.org/bugs/?25379
+
+bug #25403: 0.5.06 "manifests not equal because different volume numbers"
+https://savannah.nongnu.org/bugs/?25403
 
 Increase default volume size (--volsize) to 25M from 5M.  This
 reduces the number of volumes to accomodate larger backups.
