--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.07 (2009/01/??)
+New in v0.5.07 (2009/01/28)
 ---------------------------
 bug #25293: IOError: [Errno 22] Invalid argument
 https://savannah.nongnu.org/bugs/?25293
@@ -14,6 +14,9 @@ https://savannah.nongnu.org/patch/?6729
 
 patch #6730: Fix timing out for SSH backend
 https://savannah.nongnu.org/patch/?6730
+
+patch #6733: Improve error handling in imapbackend.py
+https://savannah.nongnu.org/patch/?6733
 
 Increase default volume size (--volsize) to 25M from 5M.  This
 reduces the number of volumes to accomodate larger backups.
