--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.5.07 (2009/01/??)
+New in v0.5.07 (2009/01/31)
 ---------------------------
 bug #25293: IOError: [Errno 22] Invalid argument
 https://savannah.nongnu.org/bugs/?25293
@@ -6,7 +6,7 @@ https://savannah.nongnu.org/bugs/?25293
 bug #25379: sys.exit() causes traceback and should not
 https://savannah.nongnu.org/bugs/?25379
 
-bug #25403: 0.5.06 "manifests not equal because different volume numbers"
+bug #25403: 0.5.06 "manifests not equal, different volume numbers"
 https://savannah.nongnu.org/bugs/?25403
 
 patch #6729: New imap backend. Replaces current gmail backend
@@ -32,8 +32,8 @@ in config.py.tmpl explaining the change.
 Add/update copyright statements in all distribution source files
 and revert duplicity to GPL version 2 license.
 
-Original fix to disallow use of ncftpput 3.2.0 mistyped the ErrorCode used
-and resulted in an error rather than an explanation.
+Original fix to disallow use of ncftpput 3.2.0 mistyped the ErrorCode
+used and resulted in an error rather than an explanation.
 
 
 New in v0.5.06 (2009/01/09)
