--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,15 @@
 New in v0.5.09 (2009/02/??)
 ---------------------------
-Split parsedurl test from backendtest and add test cases.
+Split parsedurltest from backendtest and add test cases.
 
 bug #25509: Logic error in imapbackend.py [IMAP_SERVER]
-https://savannah.nongnu.org/bugs/?25512
+https://savannah.nongnu.org/bugs/?25509
 
 bug #25512: [Patch] Retry on Imap failure
-https://savannah.nongnu.org/bugs/?25509
+https://savannah.nongnu.org/bugs/?25512
+
+bug #25530: commandline passwd not working
+https://savannah.nongnu.org/bugs/?25530
 
 FTP is now driven with pexpect rather than NcFTP utilities.
 This closes the following bugs:
